// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render default spinner 1`] = `
<div
  className="pw-spinner"
>
  <div
    className="pw-spinner__animation pw-spinner__animation--size-m"
  >
    <Box />
  </div>
  <div
    className="pw-spinner__text"
  >
    LOADING
  </div>
</div>
`;

exports[`Spinner should render donut 1`] = `
<div
  className="pw-spinner"
>
  <div
    className="pw-spinner__animation pw-spinner__animation--size-m"
  >
    <Donut />
  </div>
  <div
    className="pw-spinner__text"
  >
    LOADING
  </div>
</div>
`;

exports[`Spinner should render ellipsis 1`] = `
<div
  className="pw-spinner"
>
  <div
    className="pw-spinner__animation pw-spinner__animation--size-m"
  >
    <Ellipsis />
  </div>
  <div
    className="pw-spinner__text"
  >
    LOADING
  </div>
</div>
`;

exports[`Spinner should render large size spinner 1`] = `
<div
  className="pw-spinner"
>
  <div
    className="pw-spinner__animation pw-spinner__animation--size-l"
  >
    <Box />
  </div>
  <div
    className="pw-spinner__text"
  >
    LOADING
  </div>
</div>
`;

exports[`Spinner should render medium size spinner 1`] = `
<div
  className="pw-spinner"
>
  <div
    className="pw-spinner__animation pw-spinner__animation--size-m"
  >
    <Box />
  </div>
  <div
    className="pw-spinner__text"
  >
    LOADING
  </div>
</div>
`;

exports[`Spinner should render small size spinner 1`] = `
<div
  className="pw-spinner"
>
  <div
    className="pw-spinner__animation pw-spinner__animation--size-s"
  >
    <Box />
  </div>
  <div
    className="pw-spinner__text"
  >
    LOADING
  </div>
</div>
`;
